# labd-statiegeld

./: .gitignore  AGENTS.md  INSTALL.md  README.md  Taskfile.yml  main.py  pyproject.toml
src/statiegeld/: auth.py  config.py  database.py  fake_scanner.py  main.py  models.py  openfoodfacts.py  scanner.py  seed.py
src/statiegeld/static/: style.css
src/statiegeld/templates/: base.html  history.html  products.html  session.html
src/statiegeld/templates/sqladmin/: layout.html
systemd/: statiegeld-scanner.service  statiegeld-web.service
