[project]
name = "statiegeld"
version = "0.1.0"
description = "Deposit refund scanner and tracker for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.95,<0.100",
    "pydantic>=1.10,<2",
    "uvicorn",
    "jinja2",
    "sqlalchemy",
    "python-multipart",
    "httpx",
    "sqladmin",
    "itsdangerous",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statiegeld"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
